--- a/build.gradle
+++ b/build.gradle
@@ -14,3 +14,8 @@ repositories {
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
+
+
+applicationName = "forest-service"
+mainClassName = "App"
+task stage(dependsOn: ['clean', 'installDist'])
